--- a/Handout/protein_inference.tex
+++ b/Handout/protein_inference.tex
@@ -93,7 +93,7 @@ We plot the protein ID results versus two different kinds of FDR estimates in \K
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=0.45\textwidth]{graphics/protein_inference/proteinFDR.png}
-  \caption{the pseudo-ROC Curve of protein IDs. The accumulated number of protein IDs is plotted on two kinds of scales: target-decoy protein FDR and Fido posterior probability estimated FDR. The largest value of posterior probability estimated FDR is already smaller than 0.04.}
+  \caption{the pseudo-ROC Curve of protein IDs. The accumulated number of protein IDs is plotted on two kinds of scales: target-decoy protein FDR and Fido posterior probability estimated FDR. The largest value of posterior probability estimated FDR is already smaller than 0.04, this is because the posterior probability output from Fido is generally very high.}
   \label{fig:proteinfdr}
 \end{figure}
 
