--- a/Handout/protein_inference.tex
+++ b/Handout/protein_inference.tex
@@ -73,7 +73,7 @@ ROC curves illustrate the discriminative capability of the scores of IDs.
 In the case of protein identifications, Fido produces the posterior probability of each protein as the output score.
 However, a perfect score should not only be highly discriminative (distinguishing true from false IDs), 
 it should also be ``calibrated'' (for probability indicating that all IDs with reported posterior probability scores of 95\% 
-should roughly of 5\% probability be false. This implys that the estimated number of false positives can be computed as the sum
+should roughly of 5\% probability be false. This implies that the estimated number of false positives can be computed as the sum
 of posterior error probability ( = 1 - posterior probability), further an posterior probability estimated FDR is also possible to be computed. 
 Therefore, we can plot calibration curves to help us visualize the
 quality of the score (when the score is interpreted as a probability as Fido does), by comparing how similar the target-decoy estimated FDR and the posterior probability estimated FDR are. Good results should show a close correspondence between these two measurements. 
