--- a/Handout/protein_inference.tex
+++ b/Handout/protein_inference.tex
@@ -87,7 +87,7 @@ When configuring this node, select the \textit{opt\_global\_target\_decoy} colum
 column. We want to find out, how good our inferred protein probability discriminates between them, therefore add\\
 \textit{best\_search\_engine\_score[1]} (the inference engine score is treated like a peptide search engine score) to 
 the list of \textit{"Columns containing positive class probabilities"}. View the plot by right-clicking and selecting 
-\textit{View: ROC Curves}. A perfect classifier has an area under the curve of $1.0$ and its curve touches the upper 
+\textit{View: ROC Curves}. A perfect classifier has an area under the curve (AUC) of $1.0$ and its curve touches the upper 
 left of the plot.
 However, in protein or peptide identification, the ground-truth (i.e., which target identifications are true, which 
 are false) is usually not known. Instead, so called pseudo-ROC Curves are regularly used to plot the number of target 
