--- a/Handout/protein_inference.tex
+++ b/Handout/protein_inference.tex
@@ -4,8 +4,7 @@ In the last chapter, we have successfully quantified peptides in a label-free ex
 further extend this label-free quantification workflow by protein inference and protein quantification capabilities.
 This workflow uses some of the more advanced concepts of KNIME, as well as a few more nodes containing R code.
 For these reasons, you will not have to build it yourself. Instead, we have already
-prepared and copied this workflow to the USB sticks. Just import \directory{Workflows > Protein Inference > labelfree
-\_with\_protein\_quantification.knwf} into KNIME
+prepared and copied this workflow to the USB sticks. Just import \directory{Workflows > labelfree\_with\_protein\_quantification.knwf} into KNIME
 via \menu{File > Import KNIME workflow > Select file} and double-click the imported workflow in order to open it.
 
 Before you can execute the workflow, you again have to correct the locations of the files in the \KNIMENODE{Input 
