--- a/Handout/protein_inference.tex
+++ b/Handout/protein_inference.tex
@@ -117,8 +117,7 @@ Then posterior probabilistic-driven FDR is estimated by the average of the poste
 significant protein IDs. Since FDR is the property for a group of protein IDs, we can also calculate a local 
 property for each protein: the $q$-value of a certain protein ID is the minimum FDR of any groups of protein IDs that 
 contain this protein ID. 
-We plot the protein ID results versus two different kinds of FDR estimates in \KNIMENODE{R View(Table)} (see Figure 
-\ref{fig:proteinfdr}).
+We plot the protein ID results versus two different kinds of FDR estimates in \KNIMENODE{R View(Table)} (see Fig.~\ref{fig:proteinfdr}).
 
 \begin{figure}[htbp]
   \centering
