--- a/Handout/protein_inference.tex
+++ b/Handout/protein_inference.tex
@@ -5,7 +5,7 @@ further extend this label-free quantification workflow by protein inference and 
 This workflow uses some of the more advanced concepts of KNIME, as well as a few more nodes containing R code.
 For these reasons, you will not have to build it yourself. Instead, we have already
 prepared and copied this workflow to the USB sticks. Just import \directory{Workflows > labelfree\_with\_protein\_quantification.knwf} into KNIME
-via \menu{File > Import KNIME workflow > Select file} and double-click the imported workflow in order to open it.
+via the menu entry \menu{File > Import KNIME workflow > Select file} and double-click the imported workflow in order to open it.
 
 Before you can execute the workflow, you again have to correct the locations of the files in the \KNIMENODE{Input 
 Files} nodes (don't forget the one for the FASTA database inside the ``ID'' meta node). Try and run your workflow by 
