[DRAFT] ProteomicsLFQ, current with lfq_spikein_dilution

--- a/Handout/protein_inference.tex
+++ b/Handout/protein_inference.tex
@@ -132,3 +132,17 @@ We plot the protein ID results versus two different kinds of FDR estimates in \K
   \caption{the pseudo-ROC Curve of protein IDs. The accumulated number of protein IDs is plotted on two kinds of scales: target-decoy protein FDR and Fido posterior probability estimated FDR. The largest value of posterior probability estimated FDR is already smaller than 0.04, this is because the posterior probability output from Fido is generally very high.}
   \label{fig:proteinfdr}
 \end{figure}
+
+\subsection{ProteomicsLFQ - One-Tool-Solution}
+We would like to introduce the \KNIMENODE{ProteomicsLFQ}, which makes analysis of labelfree data far easier, without the need of a complex self-build workflow.
+This One-Tool-Solution is able to automatically quantify labfree experiments, estimate \& filter via psm level FDR, perform protein inference and estimate \& filter protein level FDR.
+Identification can still be performed using your favorit search engine. It is advised to  pre-filter the PSM information at a 5\% FDR before supplying it to the \KNIMENODE{ProteomicsLFQ},
+as shown in the example workflow below. 
+
+Here, we are showing the labelfree\_with\_protein\_quantification workflow as a proteomicslfq version. 
+
+      
+      
+
+
+ 
