add MSstatsTMT and results

--- a/Handout/protein_inference.tex
+++ b/Handout/protein_inference.tex
@@ -1,4 +1,5 @@
 \section{Protein Inference}
+\label{topic:protein_inference}
 
 In the last chapter, we have successfully quantified peptides in a label-free experiment. As a next step, we will
 further extend this label-free quantification workflow by protein inference and protein quantification capabilities.
